test/parse/bad-string-eof.txt
;;; ERROR: 1
(module (func) (export "
(;; STDERR ;;;
parse/bad-string-eof.txt:3:25: newline in string
parse/bad-string-eof.txt:3:25: syntax error, unexpected EOF, expecting TEXT
;;; STDERR ;;)
